Fix problem with Brand Title on the web version of the app (change from yoFireShopping to yoFireAuth.

--- a/yoFireAuth/client/components/navbar/navbar.html
+++ b/yoFireAuth/client/components/navbar/navbar.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="/home">ShoppingCart
+        <a class="navbar-brand" href="/home">yoFireAuth
         </a>
       </div>
 
