--- a/yoMongoAuth/client/components/navbar/navbar.html
+++ b/yoMongoAuth/client/components/navbar/navbar.html
@@ -22,9 +22,17 @@
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
         <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings">Change Password</a></li>
+        <li ng-show="changePassOk()" ng-class="{active: isActive('/settings')}"><a href="/settings">Change Password</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
 </div>
+
+<header class="hero-unit" id="banner">
+  <div class="container">
+    <h1>Mongo DB User Authentication Demo</h1>
+
+    <p class="lead">Provide User Authentication to a Mongo DB database</p>
+  </div>
+</header>
